# PMB_PM

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  code_review.md  code_review_pickle.md  docker-compose.yml
.claude/: ralph-loop.local.md
backend/: AGENTS.md  conftest.py  pyproject.toml
backend/app/: ai.py  auth.py  main.py  models.py  repository.py  services.py
backend/db/migrations/: 0001_init.sql  0002_users_sessions_boards.sql  0003_board_members.sql
backend/tests/e2e/: test_live_openrouter.py  test_live_server.py
backend/tests/integration/: test_boards_api.py  test_routes.py  test_sharing_api.py
backend/tests/unit/: test_ai.py  test_auth.py  test_card_metadata.py  test_example_page.py  test_models.py  test_repository.py  test_sharing.py
docs/: AI_CONTRACT.md  DATABASE.md  IMPROVEMENT_PLAN.md  LOOP_LOG.md  PLAN.md
frontend/: AGENTS.md  next.config.ts
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  BoardSwitcher.test.tsx  BoardSwitcher.tsx  CardEditor.test.tsx  CardEditor.tsx  CardMeta.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx  ShareDialog.test.tsx  ShareDialog.tsx  icons.tsx
frontend/src/lib/: aiChat.test.ts  aiChat.ts  api.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-unix.sh  start-windows.ps1  stop-linux.sh  stop-unix.sh  stop-windows.ps1
